fix(mobile): UI-Tests: Wrong font color in Details (176-details) [OAPTAU-509]
- Added color variables that were missing in details list styles

--- a/tau/src/css/profile/mobile/changeable/common/listview.less
+++ b/tau/src/css/profile/mobile/changeable/common/listview.less
@@ -340,7 +340,7 @@
 
 	&.ui-details {
 		.ui-li-static {
-			color: white;
+			color: @color_details_text;
 			padding: 24 * @unit_base 32 * @unit_base 23 * @unit_base 32 * @unit_base;
 			height: 97 * @unit_base;
 			line-height: 54 * @unit_base;
@@ -355,7 +355,7 @@
 			}
 
 			.li-text-sub {
-				color: white;
+				color: @color_details_sub_text;
 				height: 43 * @unit_base;
 				position: initial;
 				float: none;
